# illustris

./: .readthedocs.yml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: docs-writer.agent.md  general-dev.agent.md  test-specialist.agent.md
.github/workflows/: pypi.yml
src/illustris/: groupcat.py  snapshot.py
